bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,8 @@ pipelines:
         caches:
           - node
         script: 
-          - yarn install
+          - echo "node image"
+          #- yarn install
           
     - step:
         name: Deploy to digitalocean
